--- a/css/starter.css
+++ b/css/starter.css
@@ -121,9 +121,131 @@ a:visited{
   color: blue;
 }
 
-.card header{
+.card{
+  border-radius: 50px 50px 0px 0px;
+  display: flex;
+  flex-direction: column; /* Allows for vertical stacking of elements inside .card */
+  flex-basis: 450px; /* Sets the initial size of the card to 450px */
+  max-width: 100%; /* Ensures it doesn't exceed the container width on smaller screens */
+}
+.card > header{
   background-color: #288088;
   border: 2px solid #45ADAD;
   padding: 20px 0px;
   border-radius: 50px 50px 0px 0px;
+}
+
+div.pricing{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#logo {
+  width: 25px;
+  opacity: 0;
+  animation: growAndFadeIn 5s ease forwards;
+}
+
+@keyframes growAndFadeIn {
+  0% {
+    width: 25px;
+    opacity: 0;
+  }
+  100% {
+    width: 475px;
+    opacity: 1;
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  #logo {
+    animation: none; /* Disables the animation */
+    width: 475px; /* Ensures the logo appears in its final size */
+    opacity: 1;   /* Ensures the logo is fully visible */
+  }
+}
+
+.gallery img {
+  border: solid 10px #50C7C7;
+  margin: 10px;
+  width: 300px;
+}
+
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+@media (min-width: 900px){
+  body > header:first-of-type{
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .nav_links {
+    display: flex;
+    flex-direction: row;
+  }
+  div.pricing{
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .card{
+    flex-basis: 275px; /* Sets the initial width of each card to 275px */
+  }
+  main{
+    padding-top: 120px;
+  }
+}
+
+@media print {
+  /* Body font settings */
+  body {
+    font-family: Arial, Helvetica;
+    background-image: none; /* Removes the background image */
+  }
+
+  /* Hide gallery section */
+  .gallery, #gallery {
+    display: none;
+  }
+  nav{
+    width: 100%;
+  }
+  .nav_links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; /* Adjust spacing based on design needs */
+  }
+
+  .nav{
+    flex-direction: row;
+
+  }
+  /* Pricing class alignment */
+  div.pricing {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: flex-end; /* Aligns elements along the bottom */
+    flex-direction: row;
+  }
+  .card {
+    border: solid 2px #45ADDD; /* Adds solid border */
+    flex-basis: 325px; /* Ensures consistent width in print */
+  }
+
+  /* Adding thumbs up symbol to list items in cards */
+  .card ul li:nth-child(even)::after {
+    content: "\1F44D "; /* Unicode for thumbs up symbol */
+    margin-right: 8px; /* Space between icon and text */
+  }
 }
